--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,14 +58,14 @@ services:
 
   phpfpm:
     container_name: phpfpm
-    image: 'bitnami/php-fpm:latest'
+    image: 'bitnami/php-fpm:8.3.9'
     volumes:
       - ./public:/usr/src/app/public
       - ./containers:/usr/src/app/containers
     environment:
       PHP_ENABLE_OPCACHE: false
       PHP_MEMORY_LIMIT: '1g'
-      
+
 
 
   bellissimo:
