--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,16 +59,14 @@ services:
   phpfpm:
     container_name: phpfpm
     # image: 'bitnami/php-fpm:8.3.9'
-    # image: 'php:8.4-rc-fpm-alpine3.20'
-    image: joseluisq/php-fpm:8.3
+    # image: 'php:8.4-rc-fpm'
+    image: 'crunchgeek/php-fpm:8.2'
     volumes:
       - ./public:/usr/src/app/public
       - ./containers:/usr/src/app/containers
     environment:
       PHP_ENABLE_OPCACHE: false
       PHP_MEMORY_LIMIT: '1g'
-
-
 
   bellissimo:
     restart: always
@@ -90,7 +88,7 @@ services:
       - REDIS_URI=redis://redis/
       - MONGO_URI=mongodb://mongo:27017
       - PHP_FPM_HOST=phpfpm
-      - PHP_FPM_PORT=9090
+      - PHP_FPM_PORT=9000
       - REMOTE_FUNCTION_ENDPOINT=http://bellissimo:8000
     depends_on:
       redis:
